kb matching over aida docs